fix: proposal